Decentralized Timelord, and nodes can choose to be one or just Farmers, processed by cache of blocks, however the code needs a big cleanup, Currently blocks of PoS non finalized get cached and try to reprocessed after